Added Dockerfiles, docker-compose, Kafka integration, SonarQube, Checkstyle